# grain_price_predictor

./: .env.example  .gitignore  pyproject.toml  spec_prediccion_precios_maiz_hortalizas_sinaloa.md
.claude/: settings.local.json
models/: corn_lgbm_v1_calib.json
scripts/: discovery_report.py  download_all.py  predict_corn.py  train_corn.py
src/grain_price_predictor/: __init__.py
src/grain_price_predictor/evaluation/: __init__.py  backtest.py
src/grain_price_predictor/features/: __init__.py  corn_features.py  corn_target.py
src/grain_price_predictor/ingestion/: __init__.py  banxico.py  base.py  cme.py  conagua.py  nasa_power.py  noaa.py  siap.py  sniim.py  usda_nass.py  world_bank.py
src/grain_price_predictor/models/: __init__.py  baselines.py  corn_lgbm.py
src/grain_price_predictor/utils/: __init__.py  storage.py
