[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grain_price_predictor"
version = "0.1.0"
description = "Grain and vegetable price prediction for Sinaloa, Mexico"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "yfinance>=0.2",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
    "loguru>=0.7",
    "click>=8.1",
    "rich>=13.0",
    "tenacity>=8.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
